--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Other stuff
-native/src/cmake/SEALConfig.cmake
-native/src/cmake/SEALConfigVersion.cmake
-native/src/cmake/SEALTargets.cmake
+cmake/SEALConfig.cmake
+cmake/SEALConfigVersion.cmake
+cmake/SEALTargets.cmake
 native/src/seal/util/config.h
 **/CMakeCache.txt
 **/CMakeFiles
@@ -21,8 +21,12 @@ native/src/seal/util/config.h
 **/compile_commands.json
 **/.DS_Store
 **/GSL
-native/src/thirdparty/zlib/*
-!native/src/thirdparty/zlib/CMakeLists.txt
+thirdparty/zlib/*
+!thirdparty/zlib/CMakeLists.txt
+thirdparty/msgsl/*
+!thirdparty/msgsl/CMakeLists.txt
+thirdparty/googletest/*
+!thirdparty/googletest/CMakeLists.txt
 dotnet/nuget/nuget.exe
 dotnet/nuget/SEALNet.nuspec
 dotnet/nuget/SEALNet.targets
