--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -23,12 +23,12 @@
   </metadata>
   <files>
     <file src="SEALNet.targets" target="build/Microsoft.Research.SEALNet.targets" />
-    <file src="@SEAL_WINDOWS_SEAL_C_PATH@" target="runtimes/win10-x64/native" />
-    <file src="@SEAL_LINUX_SEAL_C_PATH@" target="runtimes/linux-x64/native" />
-    <file src="@SEAL_MACOS_SEAL_C_PATH@" target="runtimes/osx-x64/native" />
-    <file src="$LINUX_SEAL_C$" target="runtimes/linux-x64/native" />
-    <file src="$MACOS_SEAL_C$" target="runtimes/osx-x64/native" />
-    <file src="../lib/$Configuration$/netstandard2.1/SEALNet.dll" target="lib/netstandard2.1/" />
+    <file src="@SEAL_WINDOWS_SEAL_C_PATH@" target="runtimes/win10-x64" />
+    <file src="@SEAL_LINUX_SEAL_C_PATH@" target="runtimes/linux-x64" />
+    <file src="@SEAL_MACOS_SEAL_C_PATH@" target="runtimes/macos-x64" />
+    <file src="$LINUX_SEAL_C$" target="runtimes/linux-x64" />
+    <file src="$MACOS_SEAL_C$" target="runtimes/macos-x64" />
+    <file src="../../lib/dotnet/$Configuration$/netstandard2.1/SEALNet.dll" target="lib/netstandard2.1/" />
     <file src="../../LICENSE" target="LICENSE" />
   </files>
 </package>
