--- a/dotnet/src/SEALNet.csproj
+++ b/dotnet/src/SEALNet.csproj
@@ -11,9 +11,9 @@
     <DelaySign Condition="'$(OS)' == 'Windows_NT' And '$(SEALNetSigningCertificate)' != ''">true</DelaySign>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
-    <DocumentationFile>../lib/$(Configuration)/SEALNet.xml</DocumentationFile>
+    <DocumentationFile>$(ProjectDir)../../lib/dotnet/$(Configuration)/SEALNet.xml</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>../lib/$(Configuration)</OutputPath>
+    <OutputPath>$(ProjectDir)../../lib/dotnet/$(Configuration)</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants />
