--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -118,7 +118,6 @@
     <ClCompile Include="seal\util\uintcore.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="CMakeLists.txt" />
     <Text Include="seal\CMakeLists.txt" />
     <Text Include="seal\util\CMakeLists.txt" />
   </ItemGroup>
@@ -186,35 +185,43 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(ProjectDir)..\lib\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\sealc\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)..\..\lib\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\seal\</IntDir>
     <TargetExt>.lib</TargetExt>
     <TargetName>seal</TargetName>
+    <ExtensionsToDeleteOnClean>
+    </ExtensionsToDeleteOnClean>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(ProjectDir)..\lib\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\sealc\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)..\..\lib\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\seal\</IntDir>
     <TargetExt>.lib</TargetExt>
     <TargetName>seal</TargetName>
+    <ExtensionsToDeleteOnClean>
+    </ExtensionsToDeleteOnClean>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(ProjectDir)..\lib\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\sealc\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)..\..\lib\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\seal\</IntDir>
     <TargetExt>.lib</TargetExt>
     <TargetName>seal</TargetName>
+    <ExtensionsToDeleteOnClean>
+    </ExtensionsToDeleteOnClean>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(ProjectDir)..\lib\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)obj\sealc\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)..\..\lib\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)obj\$(Platform)\$(Configuration)\seal\</IntDir>
     <TargetExt>.lib</TargetExt>
     <TargetName>seal</TargetName>
+    <ExtensionsToDeleteOnClean>
+    </ExtensionsToDeleteOnClean>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ZLIB_ROOT);$(MSGSL_ROOT);$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/thirdparty/zlib/zlib-src;$(SolutionDir)/thirdparty/zlib/zlib-build/$(Platform);$(ProjectDir)</AdditionalIncludeDirectories>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -236,8 +243,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstaticd.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\thirdparty\zlib\zlib-build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -246,7 +253,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ZLIB_ROOT);$(MSGSL_ROOT);$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/thirdparty/zlib/zlib-src;$(SolutionDir)/thirdparty/zlib/zlib-build/$(Platform);$(ProjectDir)</AdditionalIncludeDirectories>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -267,8 +274,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstaticd.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\thirdparty\zlib\zlib-build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -279,7 +286,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ZLIB_ROOT);$(MSGSL_ROOT);$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/thirdparty/zlib/zlib-src;$(SolutionDir)/thirdparty/zlib/zlib-build/$(Platform);$(ProjectDir)</AdditionalIncludeDirectories>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -302,8 +309,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstatic.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\thirdparty\zlib\zlib-build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -314,7 +321,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ZLIB_ROOT);$(MSGSL_ROOT);$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/thirdparty/zlib/zlib-src;$(SolutionDir)/thirdparty/zlib/zlib-build/$(Platform);$(ProjectDir)</AdditionalIncludeDirectories>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -336,8 +343,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstatic.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\thirdparty\zlib\zlib-build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
