--- a/native/tests/seal/util/CMakeLists.txt
+++ b/native/tests/seal/util/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT license.
 
-target_sources(sealtest
+target_sources(sealtests
     PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/baseconverter.cpp
         ${CMAKE_CURRENT_LIST_DIR}/clipnormal.cpp
