--- a/templates/windows-build.yml
+++ b/templates/windows-build.yml
@@ -32,7 +32,7 @@ steps:
       displayName: 'CMake ZLIB'
       inputs:
           workingDirectory: native/src/thirdparty/zlib
-          cmakeArgs: '.'
+          cmakeArgs: '-DCMAKE_POSITION_INDEPENDENT_CODE=ON .'
 
     - task: CMake@1
       displayName: 'Build ZLIB'
