Added nuget packaging to pipeline-CI-Release-All.yml

--- a/pipelines/pipeline-CI-Release-All.yml
+++ b/pipelines/pipeline-CI-Release-All.yml
@@ -18,3 +18,7 @@ stages:
       parameters:
         debug: false
         name: macOS
+    - template: jobs.yml
+      parameters:
+        debug: false
+        name: Nuget
