--- a/pipelines/windows.yml
+++ b/pipelines/windows.yml
@@ -104,7 +104,7 @@ steps:
     InputType: Basic
     AnalyzeTarget: '$(Build.ArtifactStagingDirectory)\native\bin\x64\${{ parameters.path }}\*.exe'
     AnalyzeSymPath: '**\bin\**\*.pdb'
-  enabled: true
+  enabled: false
 
 - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
   displayName: 'Component Detection'
@@ -114,7 +114,7 @@ steps:
   inputs:
     uploadUrl: 'https://airbuildscan.azurewebsites.net/api/Upload'
     areaPathParent: 'SEAL'
-  enabled: true
+  enabled: false
 
 - task: securedevelopmentteam.vss-secure-development-tools.build-task-publishsecurityanalysislogs.PublishSecurityAnalysisLogs@2
   displayName: 'Publish Security Analysis Logs'
