--- a/cmake/SEALConfig.cmake.in
+++ b/cmake/SEALConfig.cmake.in
@@ -4,16 +4,19 @@
 # Exports target SEAL::seal
 #
 # Creates variables:
-#   SEAL_FOUND : If Microsoft SEAL and all required dependencies were found
-#   SEAL_BUILD_TYPE : The build configuration used
+#   SEAL_FOUND : If a static Microsoft SEAL library was found
+#   SEAL_SHARED_FOUND : If a shared Microsoft SEAL library was found
+#   SEAL_C_FOUND : If a Microsoft SEAL C export library was found
+#   SEAL_VERSION : The full version number
+#   SEAL_VERSION_MAJOR : The major version number
+#   SEAL_VERSION_MINOR : The minor version number
+#   SEAL_VERSION_PATCH : The patch version number
 #   SEAL_DEBUG : Set to non-zero value if library is compiled with extra debugging code (very slow!)
-#   SEAL_LIB_BUILD_TYPE : Set to either "Static", "Static_PIC", or "Shared" depending on library build type
 #   SEAL_USE_CXX17 : Set to non-zero value if library is compiled as C++17 instead of C++14
 #   SEAL_ENFORCE_HE_STD_SECURITY : Set to non-zero value if library is compiled to enforce at least
 #       a 128-bit security level based on HomomorphicEncryption.org security estimates
 #   SEAL_USE_MSGSL : Set to non-zero value if library is compiled with Microsoft GSL support
 #   SEAL_USE_ZLIB : Set to non-zero value if library is compiled with zlib support
-#   MSGSL_INCLUDE_DIR : Holds the path to Microsoft GSL if library is compiled with Microsoft GSL support
 
 @PACKAGE_INIT@
 
@@ -43,6 +46,11 @@ endmacro()
 set(SEAL_FOUND FALSE)
 set(SEAL_SHARED_FOUND FALSE)
 set(SEAL_C_FOUND FALSE)
+
+set(SEAL_VERSION @SEAL_VERSION@)
+set(SEAL_VERSION_MAJOR @SEAL_VERSION_MAJOR@)
+set(SEAL_VERSION_MINOR @SEAL_VERSION_MINOR@)
+set(SEAL_VERSION_PATCH @SEAL_VERSION_PATCH@)
 
 set(SEAL_BUILD_TYPE @CMAKE_BUILD_TYPE@)
 set(SEAL_DEBUG @SEAL_DEBUG@)
