Removed crootsquad.cpp and changed CredScan to V2 in windows.yml pipeline

--- a/pipelines/windows.yml
+++ b/pipelines/windows.yml
@@ -20,6 +20,7 @@ steps:
 - task: securedevelopmentteam.vss-secure-development-tools.build-task-credscan.CredScan@2
   displayName: 'Run CredScan'
   inputs:
+    toolMajorVersion: 'V2'
     outputFormat: sarif
     debugMode: false
 
