Fixed the *nix pipeline to run correct sealtest executable

--- a/pipelines/nix.yml
+++ b/pipelines/nix.yml
@@ -12,7 +12,7 @@ steps:
 
 - script: |
       cd $BUILD_SOURCESDIRECTORY
-      ./bin/sealtests
+      ./bin/sealtest
   displayName: 'Run unit tests'
 
 - task: UseDotNet@2
