--- a/native/tests/SEALTest.vcxproj.filters
+++ b/native/tests/SEALTest.vcxproj.filters
@@ -140,7 +140,7 @@
     <ClCompile Include="seal\serialization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="seal\util\baseconverter.cpp">
+    <ClCompile Include="seal\util\rns.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
   </ItemGroup>
