--- a/native/tests/seal/util/CMakeLists.txt
+++ b/native/tests/seal/util/CMakeLists.txt
@@ -3,7 +3,6 @@
 
 target_sources(sealtest
     PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}/baseconverter.cpp
         ${CMAKE_CURRENT_LIST_DIR}/clipnormal.cpp
         ${CMAKE_CURRENT_LIST_DIR}/common.cpp
         ${CMAKE_CURRENT_LIST_DIR}/hash.cpp
@@ -14,6 +13,7 @@ target_sources(sealtest
         ${CMAKE_CURRENT_LIST_DIR}/polyarithmod.cpp
         ${CMAKE_CURRENT_LIST_DIR}/polyarithsmallmod.cpp
         ${CMAKE_CURRENT_LIST_DIR}/polycore.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/rns.cpp
         ${CMAKE_CURRENT_LIST_DIR}/smallntt.cpp
         ${CMAKE_CURRENT_LIST_DIR}/stringtouint64.cpp
         ${CMAKE_CURRENT_LIST_DIR}/uint64tostring.cpp
