--- a/native/src/SEAL_C.vcxproj.filters
+++ b/native/src/SEAL_C.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="seal\c\valcheck.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="seal\c\version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="seal\c\dllmain.cpp">
@@ -185,6 +188,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="seal\c\valcheck.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="seal\c\version.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
