--- a/native/tests/SEALTest.vcxproj.filters
+++ b/native/tests/SEALTest.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClCompile Include="seal\util\rns.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
+    <ClCompile Include="seal\util\serialization.cpp">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="seal\CMakeLists.txt">
